--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://remotemysql.com:3306/6gSgqWHF3E
+spring.datasource.username=6gSgqWHF3E
+spring.datasource.password=xyW8Xrg51X
