--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:mysql://remotemysql.com:3306/6gSgqWHF3E
 spring.datasource.username=6gSgqWHF3E
 spring.datasource.password=xyW8Xrg51X
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+server.address=192.168.178.80
