Added HTTPS support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,11 @@ spring.datasource.username=6gSgqWHF3E
 spring.datasource.password=xyW8Xrg51X
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+
 server.address=192.168.178.80
+server.port=8443
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:keystore/BMA.p12
+server.ssl.key-store-password=password
+server.ssl.key-alias=BMA-spring
+
